# dump1090.dependencies.librtlsdr

./: CMakeLists.txt
lib/win_x64/: rtlsdr.lib
lib/win_x86/: rtlsdr.lib
